Sloved the issue of horizontal overflow in the website

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    overflow-x:hidden;
+}
 header{
     height: 100vh;
     display: flex;
